# notifier

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  FutureIdeas  README.md  com.github.Timecraft.Notifier.avprj  meson.build
data/: com.github.Timecraft.Notifier-daemon.desktop  com.github.Timecraft.Notifier.appdata.xml  com.github.Timecraft.Notifier.desktop  com.github.Timecraft.notifier.appdata.xml  com.github.Timecraft.notifier.desktop  com.github.Timecraft.notify.appdata.xml  com.github.timecraft.notifier-daemon.desktop  com.github.timecraft.notifier.appdata.xml  com.github.timecraft.notifier.appdata.xml.in  com.github.timecraft.notifier.desktop  meson.build
data/icons/: icons.sh
data/style/: style.css
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  com.github.timecraft.notifier.pot  de.po  es.po  fr.po  nl_NL.po  pt.po
src/: Application.vala  CMakeLists.txt  Config.vala  Config.vala.cmake  Notifications.vala  Notifier-daemon.vala  Notifier.vala  meson.build  notifier-daemon.vala  notifier.vala
src/daemon/: meson.build
src/main/: meson.build  notifier.vala
src/main/Events/: Events.vala
src/main/Rems/: Rems.vala
src/main/Vars/: Vars.vala
src/main/Widgets/: Guis.vala
